[fix] navbtn border on tablet

--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ footer {
 
   .navbar {
     height: 6.25em;
-    padding: 2em;
+    /* padding: 2em; */
   }
 
   .menu_1 {
